--- a/config/services.yaml
+++ b/config/services.yaml
@@ -33,3 +33,10 @@ services:
     App\Controller\:
         resource: '../src/Controller'
         tags: ['controller.service_arguments']
+
+sylius_product:
+    resources:
+        product:
+            classes:
+                model: App\Entity\Product\Product # Or App\Entity\Product
+                repository: App\Repository\ProductRepository
